--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+  <h1> Wildfires of Australia </h1>
+  <p> X : Date </p>
+  <p> Y : frp </p>
   <div>
   <script>
     // Feel free to change or delete any of the code you see in this editor!
