--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <body>
   <h1> Wildfires of Australia </h1>
+  <p>  <a href="ProjectDataViz.html">Cliquer ici pour le rapport</a> </p>
+  
   <p> X : Date </p>
   <p> Y : frp </p>
   <div>
