--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <h1> Wildfires of Australia </h1>
-  <p>  <a href="ProjectDataViz.html">Cliquer ici pour le rapport</a> </p>
+  <a href="ProjectDataViz.html"> Cliquer ici pour le rapport </a>
   
   <p> X : Date </p>
   <p> Y : frp </p>
