--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </head>
 
 <body>
+  <div>
   <h1> Wildfires of Australia </h1>
   <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Cliquer ici pour le rapport </a>
   
   <p> X : Date </p>
   <p> Y : frp </p>
+  </div>
   <div>
   <script>
     // Feel free to change or delete any of the code you see in this editor!
