--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
+    position: relative; 
 }
      .line {
         fill: none;
