--- a/map.html
+++ b/map.html
@@ -93,7 +93,7 @@
 
 
         // d3.csv("fire_archive_M6_96619.csv", function(data) {
-        d3.csv("data/fire_archive_M6_96619.csv" , function(data){
+        d3.csv("fire_archive_M6_96619.csv" , function(data){
 
   //       	svg.selectAll("circle")
 		// .data(data).enter()
