--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <div>
   <h1> Wildfires of Australia </h1>
-  <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Cliquer ici voir le rapport </a>
-     <a href="https://ranganathvaikuntham.github.io/DataViz/map.html"> Cliquer ici pour voir le projet </a>
+  <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Cliquer ici voir le rapport </a> <br><b>
+   <h1>  <a href="https://ranganathvaikuntham.github.io/DataViz/map.html"> Cliquer ici pour voir le projet </a> </h1>
   
   <p> X : Date </p>
   <p> Y : frp </p>
