--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div>
   <h1> Wildfires of Australia </h1>
-  <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Acceder le rapport du projet ici </a> <br><b>
+  <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Accéder le rapport du projet ici </a> <br><b>
    <h1>  <a href="https://ranganathvaikuntham.github.io/DataViz/map.html"> Visualisation des feux Australie </a> </h1>
   
   <p> X : Date </p>
