--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <div>
   <h1> Wildfires of Australia </h1>
-  <a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Accéder le rapport du projet ici </a> <br><b>
-   <h1>  <a href="https://ranganathvaikuntham.github.io/DataViz/map.html"> Visualisation des feux Australie </a> </h1>
+   <h2><a href="https://ranganathvaikuntham.github.io/DataViz/ProjectDataViz.html"> Accéder le rapport du projet ici </a> <br><b> </h2>
+   <h2>  <a href="https://ranganathvaikuntham.github.io/DataViz/map.html"> Visualisation des feux Australie </a> </h2>
   
   <p> X : Date </p>
   <p> Y : frp </p>
