--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p> Y : frp </p>
   </div>
   <div>
-  <script>
+<!   <script>
     /*
     // Feel free to change or delete any of the code you see in this editor!
     var margin = {top: 20, right: 10, bottom: 10, left: 10};
@@ -82,6 +82,6 @@
     })
     
 */
-  </script>
+  </script> ––> 
   </div>
 </body>
