--- a/index.html
+++ b/index.html
@@ -191,18 +191,18 @@ The ‘Github style’ heatmap on the right gives a global view of the evolution
   	<hr>
   	<p> <b>Authors : </b> <br>
   		<a href="https://twitter.com/redwane_a">
-<img border="0" alt="W3Schools" src="Twitter.png" width="40" height="20">
+<img border="0" alt="W3Schools" src="images/Twitter.png" width="40" height="20">
 </a>
   		<a href="https://github.com/redwaneaitouammi/">
-<img border="0" alt="W3Schools" src="git.png" width="20" height="20">
+<img border="0" alt="W3Schools" src="images/git.png" width="20" height="20">
 </a>
  AIT-OUAMMI Redwane 	<br>
 
 <a href="https://twitter.com/RVaikuntham">
-<img border="0" alt="W3Schools" src="Twitter.png" width="40" height="20">
+<img border="0" alt="W3Schools" src="images/Twitter.png" width="40" height="20">
 </a> 
   		<a href="https://github.com/ranganathvaikuntham/">
-<img border="0" alt="W3Schools" src="git.png" width="20" height="20">
+<img border="0" alt="W3Schools" src="images/git.png" width="20" height="20">
 </a>
  VAIKUNTHAM Ranganath <br>
   	
@@ -211,7 +211,7 @@ The ‘Github style’ heatmap on the right gives a global view of the evolution
 	<br><b>Credits : </b><br>
 	
 	 	<a href="https://www.ec-lyon.fr/">
-<img border="0" alt="W3Schools" src="ecl.png" width="20" height="20">
+<img border="0" alt="W3Schools" src="images/ecl.png" width="20" height="20">
 </a>
 	This work is done as part of an academic deliverable for the course <a href="https://github.com/LyonDataViz/MOS5.5-Dataviz">Interactive Data Visualziation</a> supervized by <a href="https://www.ec-lyon.fr/contacts/romain-vuillemot">Mr. Romain Vuillemot</a> . <br>
 
