--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ The ‘Github style’ heatmap on the right gives a global view of the evolution
 	 	<a href="https://www.ec-lyon.fr/">
 <img border="0" alt="W3Schools" src="images/ecl.png" width="20" height="20">
 </a>
-	This work is done as part of an academic deliverable for the course <a href="https://github.com/LyonDataViz/MOS5.5-Dataviz">Interactive Data Visualziation</a> supervized by <a href="https://www.ec-lyon.fr/contacts/romain-vuillemot">Mr. Romain Vuillemot</a> . <br>
+	This work is done as part of an academic deliverable for the course <a href="https://github.com/LyonDataViz/MOS5.5-Dataviz">Interactive Data Visualziation</a> supervised by <a href="https://www.ec-lyon.fr/contacts/romain-vuillemot">Mr. Romain Vuillemot</a> . <br>
 
 	The source code of the project is available on github following this <a href="https://github.com/ranganathvaikuntham/DataViz">link</a> .
 
